--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -2,7 +2,12 @@
   margin: 0;
   padding: 0;
   display: flex;
+  flex-direction: column;
+}
+.search__block {
+  display: flex;
   flex-direction: row;
+  margin-bottom: 47px;
 }
 .search {
   display: flex;
@@ -61,9 +66,9 @@
   line-height: 24px;
 }
 .button {
+  background: url(../../images/button_icon.svg) #415aff no-repeat 160px;
   height: 78px;
   width: 208px;
-  background: #415aff;
   border: none;
   box-sizing: border-box;
   border-radius: 0px 100px 100px 0px;
@@ -74,7 +79,7 @@
   font-size: 18px;
   line-height: 24px;
   /* identical to box height, or 133% */
-  text-align: center;
+  padding-left: 30px;
+  text-align: left;
   color: #ffffff;
-  background: transparent url(../../images/button_icon.svg) center no-repeat;
 }
