--- a/src/components/Element/Element.module.css
+++ b/src/components/Element/Element.module.css
@@ -6,9 +6,8 @@
   cursor: pointer;
 }
 .list {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 120px 350px 200px 200px;
 }
 .image {
   width: 120px;
