--- a/src/components/MyList/MyList.module.css
+++ b/src/components/MyList/MyList.module.css
@@ -1,10 +1,11 @@
 .block {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
 }
 .title {
   margin: 0;
+  margin-left: 113px;
   margin-bottom: 30px;
   font-family: Roboto;
   font-style: normal;
@@ -23,9 +24,8 @@
   cursor: pointer;
 }
 .list {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 50px 150px 350px 200px 50px;
 }
 .image {
   width: 120px;
@@ -33,7 +33,7 @@
 }
 .list__text {
   margin: 0;
-  margin-left: 30px;
+
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -44,7 +44,6 @@
 }
 .list__subtext {
   margin: 0;
-  margin-left: 30px;
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -52,4 +51,14 @@
   line-height: 22px;
   /* or 140% */
   color: #191919;
+}
+.header__text {
+  margin: 0;
+  margin-bottom: 15px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 22px;
+  background-color: #415aff;
+  color: white;
 }
