--- a/src/components/MoviePage/MoviePage.module.css
+++ b/src/components/MoviePage/MoviePage.module.css
@@ -17,4 +17,68 @@
   display: flex;
   flex-direction: column;
   margin-right: 25px;
+  margin-bottom: 25px;
+}
+.movie__title {
+  margin: 0;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 37px;
+  line-height: 52px;
+  /* or 133% */
+  letter-spacing: 2.25px;
+  color: #212529;
+  margin-bottom: 10px;
+}
+.subtitle {
+  margin: 0;
+  margin-bottom: 7px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 27px;
+  line-height: 42px;
+  /* or 133% */
+  letter-spacing: 2.25px;
+  color: #212529;
+}
+.subtext {
+  margin: 0;
+  margin-bottom: 5px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 21px;
+  /* identical to box height, or 133% */
+  color: #212529;
+}
+.onetext {
+  margin: 0;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 21px;
+  /* identical to box height, or 133% */
+  color: #212529;
+}
+.button {
+  margin-top: 20px;
+  border: none;
+  border-radius: 36px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 24px;
+  /* identical to box height, or 133% */
+  height: 72px;
+  width: 215px;
+  color: #191919;
+  background: url(../../images/back-button.png) #f5ff93 no-repeat 40px;
+  padding-right: 40px;
+  text-align: right;
+  cursor: pointer;
 }
