Fix: hover effects, link a href

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -32,4 +32,8 @@
   color: #191919;
   text-decoration: none;
   margin-right: 24px;
+  transition-duration: 0.3s;
+}
+.menu__link:hover {
+  opacity: 0.6;
 }
