--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -25,6 +25,17 @@
   padding-left: 40px;
   text-align: left;
   cursor: pointer;
+  transition-duration: 0.4s;
+}
+.button:hover {
+  background-color: #253757;
+  background-image: url(../../images/yellow_button_icon_negative.png);
+  color: white;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+.button:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
 .title {
   margin: 0;
