--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -75,7 +75,7 @@
   line-height: 24px;
 }
 .button {
-  background: url(../../images/button_icon.svg) #415aff no-repeat 160px;
+  background: url(../../images/search_icon.png) #415aff no-repeat 160px;
   height: 78px;
   width: 208px;
   border: none;
@@ -91,6 +91,15 @@
   padding-left: 30px;
   text-align: left;
   color: #ffffff;
+  transition-duration: 0.4s;
+}
+.button:hover {
+  background-color: #253757; /* Green */
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+.button:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
 .results {
   margin: 0;
