--- a/src/components/MoviePage/MoviePage.module.css
+++ b/src/components/MoviePage/MoviePage.module.css
@@ -81,4 +81,15 @@
   padding-right: 40px;
   text-align: right;
   cursor: pointer;
+  transition-duration: 0.4s;
+}
+.button:hover {
+  background-color: #253757;
+  background-image: url(../../images/back_button_negate.png);
+  color: white;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+.button:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
