--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -63,3 +63,25 @@
   /* identical to box height, or 133% */
   color: #212529;
 }
+@media screen and (max-width: 500px) {
+  .title {
+    margin: 0;
+    margin-bottom: 20px;
+    font-size: 34px;
+    line-height: 133%;
+  }
+  .elements {
+    margin-left: calc((100% - 300px) / 2);
+  }
+  .subtitle {
+    margin-bottom: 10px;
+    text-align: center;
+  }
+  .button {
+    font-size: 16px;
+    height: 68px;
+  }
+  .text {
+    margin-bottom: 15px;
+  }
+}
