--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -7,6 +7,7 @@
 .search__block {
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-bottom: 47px;
 }
 .info__block {
@@ -29,7 +30,7 @@
   font-style: normal;
   font-weight: normal;
   font-size: 55px;
-  line-height: 68px;
+  line-height: 124%;
   /* identical to box height, or 124% */
   letter-spacing: 1.8px;
   color: #212529;
@@ -57,6 +58,7 @@
   margin: 0;
   padding: 0;
   margin-left: 113px;
+  align-self: flex-start;
 }
 .input {
   padding: 0;
@@ -117,4 +119,122 @@
 }
 .decoration_none {
   text-decoration: none;
+}
+@media screen and (max-width: 1279px) {
+  .search {
+    max-width: 479px;
+    margin-left: 0;
+    margin-right: 92px;
+  }
+  .title {
+    font-size: 37px;
+  }
+
+  .image {
+    max-width: 392px;
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
+  .form {
+    margin-left: calc((100% - 963px) / 2);
+  }
+  .elements {
+    margin-left: calc((100% - 963px) / 2);
+  }
+  .results {
+    margin-left: 0;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .search {
+    max-width: 379px;
+    margin-right: 52px;
+  }
+  .title {
+    font-size: 32px;
+  }
+  .subtitle {
+    font-size: 18px;
+    line-height: 140%;
+    margin-top: 27px;
+    margin-bottom: 30px;
+  }
+  .image {
+    max-width: 278px;
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
+  .form {
+    margin-left: calc((100% - 709px) / 2);
+  }
+  .elements {
+    margin-left: calc((100% - 709px) / 2);
+  }
+  .results {
+    font-size: 18px;
+    line-height: 180%;
+  }
+  .input {
+    height: 68px;
+    width: 200px;
+    font-size: 16px;
+    line-height: 22px;
+  }
+  .button {
+    height: 68px;
+    width: 150px;
+    font-size: 16px;
+    line-height: 22px;
+    padding-left: 20px;
+    background-position: 110px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .search__block {
+    margin-bottom: 27px;
+  }
+  .info__block {
+    flex-direction: column;
+  }
+  .search {
+    max-width: 479px;
+    margin-right: 0;
+  }
+  .form {
+    margin-left: calc((100% - 479px) / 2);
+  }
+  .elements {
+    margin-left: calc((100% - 479px) / 2);
+  }
+  .subtitle {
+    margin-top: 17px;
+    margin-bottom: 15px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .search__block {
+    margin-bottom: 17px;
+  }
+  .search {
+    max-width: 300px;
+  }
+  .form {
+    margin-left: calc((100% - 300px) / 2);
+  }
+  .elements {
+    margin-left: calc((100% - 300px) / 2);
+  }
+  .subtitle {
+    margin-top: 17px;
+    margin-bottom: 15px;
+  }
+  .button {
+    width: 100px;
+    font-size: 16px;
+    background-position: 34px;
+    text-indent: -9999px;
+  }
+  .results {
+    font-size: 16px;
+  }
 }
