--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -19,6 +19,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+  visibility: visible;
 }
 .menu__link {
   margin: 0;
@@ -36,4 +37,31 @@
 }
 .menu__link:hover {
   opacity: 0.6;
+  text-decoration: underline;
+}
+.hamburger_button {
+  display: none;
+  background-image: url(../../images/hamburger_icon.png);
+  background-color: white;
+  background-size: contain;
+  margin-right: 32px;
+  padding-left: 40px;
+  padding-top: 40px;
+  border: none;
+  background-repeat: no-repeat;
+}
+@media screen and (max-width: 767px) {
+  .header {
+    margin-top: 24px;
+    margin-bottom: 20px;
+  }
+  .menu__link {
+    display: none;
+  }
+  .header {
+    justify-content: space-between;
+  }
+  .hamburger_button {
+    display: block;
+  }
 }
