--- a/src/components/MyList/MyList.module.css
+++ b/src/components/MyList/MyList.module.css
@@ -29,11 +29,19 @@
 }
 .image {
   width: 120px;
-  height: 200px;
 }
 .list__text {
   margin: 0;
-
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 28px;
+  /* or 140% */
+  color: #191919;
+}
+.list__hidden {
+  margin: 0;
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -61,4 +69,59 @@
   line-height: 22px;
   background-color: #415aff;
   color: white;
+}
+@media screen and (max-width: 1023px) {
+  .block {
+    align-items: center;
+  }
+  .element {
+    margin-left: calc((100% - 709px) / 2);
+    margin-right: calc((100% - 709px) / 2);
+  }
+  .title {
+    margin-left: calc((100% - 709px) / 2);
+    margin-bottom: 20px;
+  }
+  .list {
+    grid-template-columns: 40px 140px 300px 150px 40px;
+  }
+  .list__text {
+    font-size: 17px;
+    line-height: 140%;
+  }
+  .list__subtext {
+    font-size: 15px;
+    line-height: 140%;
+  }
+}
+@media screen and (max-width: 767px) {
+  .element {
+    margin-left: calc((100% - 479px) / 2);
+    margin-right: calc((100% - 479px) / 2);
+  }
+  .list {
+    display: flex;
+    flex-direction: row;
+    column-gap: 15px;
+    row-gap: 15px;
+  }
+  .header__text {
+    display: none;
+  }
+}
+@media screen and (max-width: 500px) {
+  .title {
+    font-size: 34px;
+  }
+  .element {
+    margin-left: calc((100% - 270px) / 2);
+    margin-right: calc((100% - 270px) / 2);
+  }
+  .title {
+    margin-left: calc((100% - 270px) / 2);
+    align-self: flex-start;
+  }
+  .list__hidden {
+    display: none;
+  }
 }
