--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 .header {
+  width: 100%;
   display: flex;
   flex-direction: row;
   margin-top: 34px;
@@ -63,5 +64,9 @@
   }
   .hamburger_button {
     display: block;
+    cursor: pointer;
+  }
+  .header {
+    height: 41px;
   }
 }
