--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-top: 80px;
 }
 .about {
   display: flex;
@@ -145,6 +146,7 @@
   }
   .block {
     align-items: center;
+    margin-top: 50px;
   }
   .button {
     margin-left: 0;
