--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,8 +3,11 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  margin-top: 34px;
-  margin-bottom: 30px;
+  position: fixed;
+  width: 100vw;
+  top: 0;
+  z-index: 15;
+  background-color: white;
 }
 .logo {
   margin: 0;
@@ -53,20 +56,15 @@
 }
 @media screen and (max-width: 767px) {
   .header {
-    margin-top: 24px;
-    margin-bottom: 20px;
+    height: 50px;
+    justify-content: space-between;
+    align-items: center;
   }
   .menu__link {
     display: none;
   }
-  .header {
-    justify-content: space-between;
-  }
   .hamburger_button {
     display: block;
     cursor: pointer;
-  }
-  .header {
-    height: 41px;
   }
 }
