--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -3,6 +3,7 @@
   padding: 0;
   display: flex;
   flex-direction: column;
+  margin-top: 80px;
 }
 .search__block {
   display: flex;
@@ -190,6 +191,9 @@
   }
 }
 @media screen and (max-width: 767px) {
+  .main {
+    margin-top: 50px;
+  }
   .search__block {
     margin-bottom: 27px;
   }
