--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -5,9 +5,44 @@
   top: 50px;
   right: 0;
   z-index: 10;
-  transform: translateX(100%);
+  transform: translateX(-100%);
   background-color: white;
+  transition-duration: 0.4s;
 }
 .menu.active {
   transform: translateX(0);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.menu__header {
+  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 27px;
+  line-height: 133%;
+}
+.menu__lists {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+.menu__link {
+  list-style-type: none;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 21px;
+  line-height: 120%;
+  color: #191919;
+  margin-bottom: 10px;
+  transition-duration: 0.3s;
+}
+.menu__link:hover {
+  opacity: 0.6;
+  text-decoration: none;
+}
+.menu__block {
+  margin-right: 78px;
 }
