--- a/src/components/MoviePage/MoviePage.module.css
+++ b/src/components/MoviePage/MoviePage.module.css
@@ -2,6 +2,7 @@
   margin: 0;
   margin-left: 113px;
   margin-right: 113px;
+  margin-top: 80px;
   display: flex;
   flex-direction: column;
 }
@@ -104,6 +105,7 @@
     align-items: flex-start;
     margin-left: calc((100% - 479px) / 2);
     margin-right: calc((100% - 479px) / 2);
+    margin-top: 50px;
   }
   .movie__detals {
     margin-right: 0;
