--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -15,6 +15,7 @@
   margin-right: 48px;
 }
 .logo_image {
+  padding-top: 25px;
   max-width: 77px;
 }
 .menu__list {
@@ -45,26 +46,72 @@
 }
 .hamburger_button {
   display: none;
-  background-image: url(../../images/hamburger_icon.png);
   background-color: white;
-  background-size: contain;
-  margin-right: 32px;
-  padding-left: 40px;
-  padding-top: 40px;
   border: none;
   background-repeat: no-repeat;
 }
 @media screen and (max-width: 767px) {
+  .logo_image {
+    padding-top: 0;
+  }
+  .navbar {
+    width: 35px;
+    height: 25px;
+    margin-right: 32px;
+  }
+  .hamburger_button {
+    padding: 0;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    box-sizing: border-box;
+    transition-duration: 0.4s;
+  }
+  .hamburger_button::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    width: 100%;
+    background-color: #191919;
+    height: 3px;
+    transition-duration: 0.4s;
+  }
+  .hamburger_button::after {
+    position: absolute;
+    content: '';
+    bottom: 0;
+    width: 100%;
+    background-color: #191919;
+    height: 3px;
+    transition-duration: 0.4s;
+  }
+  .hamburger_button.active::before {
+    top: 50%;
+    transform: translate(0%, 50%) rotate(45deg);
+  }
+  .hamburger_button.active::after {
+    top: 50%;
+    transform: translate(0%, 50%) rotate(-45deg);
+  }
   .header {
     height: 50px;
     justify-content: space-between;
     align-items: center;
   }
+  .button__span {
+    background-color: #191919;
+    height: 3px;
+    width: 100%;
+    z-index: 20;
+    transition-duration: 0.4s;
+  }
+  .button__span.active {
+    transform: translateX(1000%);
+  }
   .menu__link {
     display: none;
-  }
-  .hamburger_button {
-    display: block;
-    cursor: pointer;
   }
 }
