--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -170,6 +170,7 @@
   }
   .elements {
     margin-left: calc((100% - 709px) / 2);
+    margin-right: calc((100% - 709px) / 2);
   }
   .results {
     font-size: 18px;
@@ -209,6 +210,7 @@
   }
   .elements {
     margin-left: calc((100% - 479px) / 2);
+    margin-right: calc((100% - 479px) / 2);
   }
   .subtitle {
     margin-top: 17px;
