--- a/src/components/Element/Element.module.css
+++ b/src/components/Element/Element.module.css
@@ -4,6 +4,13 @@
   margin-right: 113px;
   margin-bottom: 20px;
   cursor: pointer;
+  border: 1px solid #44464d;
+  z-index: 10;
+  transition: all 0.2s;
+}
+.element:hover {
+  transform: scale(1.01);
+  box-shadow: 0 7px 5px 3px #d3d3d3;
 }
 .list {
   display: grid;
@@ -11,6 +18,7 @@
 }
 .image {
   width: 120px;
+  z-index: 1;
 }
 .title {
   margin: 0;
@@ -42,6 +50,12 @@
   }
 }
 @media screen and (max-width: 767px) {
+  .element {
+    margin-bottom: 10px;
+  }
+  .element:hover {
+    box-shadow: 0;
+  }
   .image {
     width: 90px;
     grid-row: 1/5;
