--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -141,6 +141,7 @@
   }
   .elements {
     margin-left: calc((100% - 963px) / 2);
+    margin-right: calc((100% - 963px) / 2);
   }
   .results {
     margin-left: 0;
