--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 .header {
+  max-width: 100%;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -33,7 +34,6 @@
   font-weight: normal;
   font-size: 17px;
   line-height: 80px;
-  /* identical to box height, or 500% */
   color: #191919;
   text-decoration: none;
   margin-right: 24px;
@@ -50,13 +50,18 @@
   background-repeat: no-repeat;
 }
 @media screen and (max-width: 767px) {
+  .logo {
+    margin-left: calc((100% - 479px) / 2);
+  }
+  .menu__list {
+    margin-right: calc((100% - 479px) / 2);
+  }
   .logo_image {
     padding-top: 0;
   }
   .navbar {
     width: 35px;
     height: 25px;
-    margin-right: 32px;
   }
   .hamburger_button {
     padding: 0;
@@ -96,7 +101,6 @@
     transform: translate(0%, 50%) rotate(-45deg);
   }
   .header {
-    max-width: 479px;
     height: 50px;
     justify-content: space-between;
     align-items: center;
@@ -115,8 +119,11 @@
     display: none;
   }
 }
-@media screen and (max-width: 767px) {
-  .header {
-    max-width: 320px;
+@media screen and (max-width: 500px) {
+  .logo {
+    margin-left: calc((100% - 300px) / 2);
+  }
+  .menu__list {
+    margin-right: calc((100% - 300px) / 2);
   }
 }
