--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 #root {
+  width: 100%;
   max-width: 1440px;
   min-width: 320px;
 }
